# survival_land

./: .gitignore  Dockerfile  README.md  inference.py  models.py  nginx.conf  openenv.yaml  pyproject.toml  requirements.txt  start.sh
server/: __init__.py  app.py  environment.py
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
